tests/baselines/reference/newWithSpreadES6.errors.txt
tests/cases/conformance/expressions/functionCalls/newWithSpreadES6.ts(36,16): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
tests/cases/conformance/expressions/functionCalls/newWithSpreadES6.ts(37,16): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
tests/cases/conformance/expressions/functionCalls/newWithSpreadES6.ts(40,11): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
tests/cases/conformance/expressions/functionCalls/newWithSpreadES6.ts(40,17): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
tests/cases/conformance/expressions/functionCalls/newWithSpreadES6.ts(41,16): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
tests/cases/conformance/expressions/functionCalls/newWithSpreadES6.ts(41,22): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
tests/cases/conformance/expressions/functionCalls/newWithSpreadES6.ts(45,16): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
tests/cases/conformance/expressions/functionCalls/newWithSpreadES6.ts(46,16): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
tests/cases/conformance/expressions/functionCalls/newWithSpreadES6.ts(50,18): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
tests/cases/conformance/expressions/functionCalls/newWithSpreadES6.ts(51,18): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
tests/cases/conformance/expressions/functionCalls/newWithSpreadES6.ts(55,20): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
tests/cases/conformance/expressions/functionCalls/newWithSpreadES6.ts(56,20): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
tests/cases/conformance/expressions/functionCalls/newWithSpreadES6.ts(60,21): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
tests/cases/conformance/expressions/functionCalls/newWithSpreadES6.ts(61,21): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
tests/cases/conformance/expressions/functionCalls/newWithSpreadES6.ts(65,25): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
tests/cases/conformance/expressions/functionCalls/newWithSpreadES6.ts(66,25): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
tests/cases/conformance/expressions/functionCalls/newWithSpreadES6.ts(70,16): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
tests/cases/conformance/expressions/functionCalls/newWithSpreadES6.ts(71,16): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
tests/cases/conformance/expressions/functionCalls/newWithSpreadES6.ts(75,23): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
tests/cases/conformance/expressions/functionCalls/newWithSpreadES6.ts(76,23): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
tests/cases/conformance/expressions/functionCalls/newWithSpreadES6.ts(80,25): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
tests/cases/conformance/expressions/functionCalls/newWithSpreadES6.ts(81,25): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
tests/cases/conformance/expressions/functionCalls/newWithSpreadES6.ts(85,26): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
tests/cases/conformance/expressions/functionCalls/newWithSpreadES6.ts(86,26): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
tests/cases/conformance/expressions/functionCalls/newWithSpreadES6.ts(90,30): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
tests/cases/conformance/expressions/functionCalls/newWithSpreadES6.ts(91,30): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
tests/cases/conformance/expressions/functionCalls/newWithSpreadES6.ts(95,26): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
tests/cases/conformance/expressions/functionCalls/newWithSpreadES6.ts(96,26): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.


==== tests/cases/conformance/expressions/functionCalls/newWithSpreadES6.ts (28 errors) ====
    function f(x: number, y: number, ...z: string[]) {
    }
    
    function f2(...x: string[]) {
    }
    
    interface A {
        f: {
            new (x: number, y: number, ...z: string[]);
        }
    }
    
    class B {
        constructor(x: number, y: number, ...z: string[]) {}
    }
    
    interface C {
        "a-b": typeof B;
    }
    
    interface D {
        1: typeof B;
    }
    
    var a: string[];
    var b: A;
    var c: C;
    var d: A[];
    var e: { [key: string]: A };
    var g: C[];
    var h: { [key: string]: C };
    var i: C[][];
    
    // Basic expression
    new f(1, 2, "string");
    new f(1, 2, ...a);
                   ~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
    new f(1, 2, ...a, "string");
                   ~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
    
    // Multiple spreads arguments
    new f2(...a, ...a);
              ~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
                    ~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
    new f(1 ,2, ...a, ...a);
                   ~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
                         ~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
    
    // Call expression
    new f(1, 2, "string")();
    new f(1, 2, ...a)();
                   ~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
    new f(1, 2, ...a, "string")();
                   ~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
    
    // Property access expression
    new b.f(1, 2, "string");
    new b.f(1, 2, ...a);
                     ~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
    new b.f(1, 2, ...a, "string"); 
                     ~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
    
    // Parenthesised expression
    new (b.f)(1, 2, "string");
    new (b.f)(1, 2, ...a);
                       ~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
    new (b.f)(1, 2, ...a, "string"); 
                       ~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
    
    // Element access expression
    new d[1].f(1, 2, "string");
    new d[1].f(1, 2, ...a);
                        ~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
    new d[1].f(1, 2, ...a, "string");
                        ~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
    
    // Element access expression with a punctuated key
    new e["a-b"].f(1, 2, "string");
    new e["a-b"].f(1, 2, ...a);
                            ~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
    new e["a-b"].f(1, 2, ...a, "string");
                            ~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
    
    // Basic expression
    new B(1, 2, "string");
    new B(1, 2, ...a);
                   ~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
    new B(1, 2, ...a, "string");
                   ~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
    
    // Property access expression
    new c["a-b"](1, 2, "string");
    new c["a-b"](1, 2, ...a);
                          ~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
    new c["a-b"](1, 2, ...a, "string");
                          ~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
    
    // Parenthesised expression
    new (c["a-b"])(1, 2, "string");
    new (c["a-b"])(1, 2, ...a);
                            ~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
    new (c["a-b"])(1, 2, ...a, "string");
                            ~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
    
    // Element access expression
    new g[1]["a-b"](1, 2, "string");
    new g[1]["a-b"](1, 2, ...a);
                             ~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
    new g[1]["a-b"](1, 2, ...a, "string");
                             ~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
    
    // Element access expression with a punctuated key
    new h["a-b"]["a-b"](1, 2, "string");
    new h["a-b"]["a-b"](1, 2, ...a);
                                 ~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
    new h["a-b"]["a-b"](1, 2, ...a, "string");
                                 ~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
    
    // Element access expression with a number
    new i["a-b"][1](1, 2, "string");
    new i["a-b"][1](1, 2, ...a);
                             ~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
    new i["a-b"][1](1, 2, ...a, "string");
                             ~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.